# cirun-py

./: .buildinfo  CNAME  LICENSE.txt  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: docs.yml  release.yml  test.yml
_modules/: index.html
_modules/cirun/: client.html
_sources/: api.rst.txt  index.rst.txt
_static/: documentation_options.js
cirun/: __about__.py  __init__.py  client.py  cloud.py  main.py  repo.py  utils.py
cirun/tests/: test_client.py  test_integration.py
docs/: api.rst  conf.py  index.rst
tests/: __init__.py
