[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cirun"
description = 'Cirun Python Client'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Amit Kumar", email = "amit@cirun.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hatchling",
  "rich",
  "typer",
  "hatch",
  "requests",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/aktechlabs/cirun-py#readme"
Issues = "https://github.com/aktechlabs/cirun-py/issues"
Source = "https://github.com/aktechlabs/cirun-py"

[tool.hatch.version]
path = "cirun/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=cirun --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "cirun/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
include = ["cirun"]

[project.scripts]
cirun = "cirun.main:app"
